--- a/pom.xml
+++ b/pom.xml
@@ -92,7 +92,11 @@
 			<artifactId>httpmime</artifactId>
 			<version>4.5.13</version>
 		</dependency>
-
+		<dependency>
+			<groupId>com.google.firebase</groupId>
+			<artifactId>firebase-admin</artifactId>
+			<version>9.0.0</version>
+		</dependency>
 		
 		<!-- Maven -->
 		<dependency>
@@ -119,7 +123,7 @@
 				</configuration>
 			</plugin>
 		</plugins>
-		<finalName>docker-spring-boot</finalName>
+		<!-- <finalName>docker-spring-boot</finalName> -->
 	</build>
 
 </project>
